--- a/kasir.html
+++ b/kasir.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Sistem Kasir Supermarket</title>
+  <title>Kasir Es Teh Delok Horeg</title>
   <style>
     body {font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; margin: 0; padding: 0; background: #ffffff;}
     header {background: #d4af37; color: white; padding: 15px; text-align: center; font-size: 22px; font-weight: bold;}
