--- a/kasir.html
+++ b/kasir.html
@@ -30,7 +30,7 @@
   </style>
 </head>
 <body>
-  <header>Sistem Kasir Supermarket</header>
+  <header>Kasir Es Teh Delok Horeg</header>
   <nav>
     <a href="#" onclick="showPage('penjualan')">Penjualan</a>
     <a href="#" onclick="showPage('stok')">Stok Produk</a>
